--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-06-06 18:04:08 -0400 
+%% Created for Vijay at 2011-06-15 18:19:12 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,30 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@article{myers1998,
+	Author = {Brad A. Myers},
+	Date-Added = {2011-06-15 18:02:20 -0400},
+	Date-Modified = {2011-06-15 18:17:01 -0400},
+	Journal = {Interactions},
+	Month = {march},
+	Number = {2},
+	Pages = {44-54},
+	Title = {A Brief History of Human-Computer Interaction Technology},
+	Volume = {5},
+	Year = {1998}}
+
+@article{buja1996,
+	Author = {Andreas Buja and Dianne Cook and Deborah F. Swayne},
+	Date-Added = {2011-06-15 17:59:58 -0400},
+	Date-Modified = {2011-06-15 18:01:33 -0400},
+	Journal = {Journal of Computational and Graphical Statistics},
+	Month = {March},
+	Number = {1},
+	Pages = {78-99},
+	Title = {Interactive High-Dimensional Data Visualization},
+	Volume = {5},
+	Year = {1996}}
 
 @article{annett1967,
 	Author = {J. Annett and K. Duncan},
