--- a/vizmapper.tex
+++ b/vizmapper.tex
@@ -73,7 +73,7 @@ This model of musical instrument design generalizes well to anything from a self
 
 \section{System Design}
 
-As a piece of software, there are a limited number of options for implementing the system while ensuring that the system can be reliably used on the variety of systems that a team designing a musical system might have. As of the time that this system has been implemented, the most common form factors for computers are desktops, laptops, tablets, and smartphones. Each form factor is typically loaded with one of a small collection of operating systems that are widely available and are easy to find expert knowledge about.
+As a piece of software, there are a limited number of options for implementing the system while ensuring that the system can be reliably used on the variety of systems that a team designing a musical system is likely to be using in the present and future. As of the time that this system has been implemented, the most common form factors for computers are desktops, laptops, tablets, and smartphones. Each form factor is typically loaded with one of a small collection of operating systems that are widely available and are easy to find expert knowledge about.
 
 \begin{description}
 \item \emph{Desktops/Laptops}
@@ -88,6 +88,8 @@ As a piece of software, there are a limited number of options for implementing t
 \item iOS
 \end{description}
 \end{description}
+
+
 
 This is not intended to be a rigorous list, however the point is that it is not practical (especially in a research context) to develop and maintain several versions of a software system that will work on a wide variety of operating systems and devices. However, the fact is that people will use whatever system they have available and the variety of devices that an artist or engineer is likely to use to interact with a sensor network is increasing. To design a system that is meant to work in a collaborative context, it is crucial that this reality be adapted to.
 
