--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-06-15 18:19:12 -0400 
+%% Created for Vijay at 2011-06-20 19:39:38 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,24 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@book{functionMapping,
+	Author = {Peter V. O'Neil},
+	Date-Added = {2011-06-20 16:37:41 -0400},
+	Date-Modified = {2011-06-20 16:40:07 -0400},
+	Publisher = {Wiley-Interscience},
+	Title = {Beginning Partial Differential Equations},
+	Year = {1999}}
+
+@phdthesis{marshall2008,
+	Address = {Montreal, QC, Canada},
+	Author = {Mark T. Marshall},
+	Date-Added = {2011-06-20 14:02:20 -0400},
+	Date-Modified = {2011-06-20 14:06:11 -0400},
+	Month = {April},
+	School = {McGill University},
+	Title = {Physical Interface Design for Digital Musical Instruments},
+	Year = {2008}}
 
 @article{myers1998,
 	Author = {Brad A. Myers},
