started importance of mapping section

--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-06-20 19:39:38 -0400 
+%% Created for Vijay at 2011-06-24 16:11:00 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,15 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@inproceedings{tstick2007,
+	Author = {Joseph Malloch and Marcelo M. Wanderley},
+	Booktitle = {Proc. of the 2007 Conf. on New Interfaces for Musical Expression},
+	Date-Added = {2011-06-24 16:07:53 -0400},
+	Date-Modified = {2011-06-24 16:10:52 -0400},
+	Pages = {66-69},
+	Title = {The T-Stick: From Musical Interface to Musical Instrument},
+	Year = {2007}}
 
 @book{functionMapping,
 	Author = {Peter V. O'Neil},
