--- a/vijay_thesis.tex
+++ b/vijay_thesis.tex
@@ -93,7 +93,8 @@ Thesis regulations require that contributions by others in the collection of
   UID		&	User Interface Design\\
   DMI		&	Digital Musical Instrument\\
   EMI		&	Electronic Musical Instrument\\
-  OSC	&	Open Sound Control
+  OSC	&	Open Sound Control\\
+  IDMIL	&	Input Devices and Music Interaction Laboratory\\
 \end{longtable}
 
 \cleardoublepage
