--- a/mapping.tex
+++ b/mapping.tex
@@ -44,11 +44,11 @@ conceptual metaphor
 function
 morphism
 
-The term \emph{mapping} is used in mathematics, computer science, and related technical fields to encapsulate the concept of a function and other related concepts. \emph{Mapping} is often shortened to \emph{map}. Like most technical terms used in multiple technical fields, the meaning of \emph{mapping} varies according to the context of the field that it is used. However in the case of mapping, the variation is subtle enough that a cursory understanding of the way mapping is used in a couple of contexts outside of DMIs might illuminate why it is a necessary and valuable concept to encapsulate in the context of new musical interfaces.
+The term \emph{mapping} is used in mathematics, computer science, and related technical fields to encapsulate the concept of a \emph{function} and other related concepts. \emph{Mapping} is often shortened to \emph{map}. Like most technical terms used in multiple technical disciplines, the meaning of \emph{mapping} varies according to the context of the field that it is used. However in the case of mapping, the variation is subtle enough that a cursory understanding of the way mapping is used in a couple of contexts outside of DMIs might illuminate why it is a necessary and valuable concept to encapsulate in the context of new musical interfaces.
 
 In mathematics terminology, the use of the term mapping varies subtly according to sub-discipline within mathematics and often between specific mathematicians, however it is acceptable to use the word as a synonym for \emph{function}. A function in mathematics describes an associative relationship between two sets of numbers. One set of numbers is referred to as a domain or set of inputs and the other set is referred to as a codomain, range, or set of outputs. Mathematicians often say that a function maps a domain to or onto a range, hence the reason for using the term \emph{mapping} as a synonym for \emph{function}.
 
-Strictly speaking in mathematics, a function can only represent a \emph{one-to-one mapping}. This means that every element in the input (domain) set is associated by the function with one and only one element in the output (range) set. The corollary statement about a one-to-one mapping is that every element in the output set might be associated to one element, many elements, no elements, or all elements in the input set.
+Strictly speaking in mathematics, a function can only represent a \emph{one-to-one mapping}. This means that every element in the input (domain) set is associated by the function with one and only one element in the output (range) set. A corollary statement about a one-to-one mapping is that every element in the output set might be associated to one element, many elements, no elements, or all elements in the input set.
 
 The following are examples of equations that represent one-to-one mappings:
 
@@ -59,37 +59,41 @@ y = f(x) = x + 1
 z = g(x) = x^{2}
 \end{equation}
 
-Common types of functions (one-to-one mappings) like \ref{eq1} and \ref{eq2} often use the set of all real numbers (any number that can be expressed in decimal notation) as both the input set and the output set. Since the set of all real numbers is infinitely large, the association from one input element to one output element is described by a mathematical transformation that when applied to any element of the input set (the set of all real numbers) produces the element of the output set (the set of all real numbers) that the input element is associated to or mapped onto. This is convenient because that means the function can be written very concisely in one line. 
+Common types of functions (one-to-one mappings) like \ref{eq1} and \ref{eq2} often use the set of all real numbers (roughly, defined as any number that can be expressed in decimal notation) as both the input set and the output set. Since the set of all real numbers is infinitely large, the association from one input element to one output element is described by a mathematical transformation that when applied to any element of the input set (the set of all real numbers) produces the element of the output set (the set of all real numbers) that the input element is associated to or mapped onto. This is convenient because that means the function can be written very concisely in one line. 
 
-\ref{eq1} represents a mapping labeled \begin{math}f\end{math} where the input element is labeled \begin{math}x\end{math} and the output element is labeled \begin{math}y\end{math}. \ref{eq2} represents a mapping labeled \begin{math}g\end{math} where the input element is labeled \begin{math}x\end{math} and the output element is labeled \begin{math}z\end{math}.
+\ref{eq1} represents a mapping labeled \begin{math}f\end{math} where the input element is labeled \begin{math}x\end{math} and the output element is labeled \begin{math}y\end{math}. \ref{eq2} represents a mapping labeled \begin{math}g\end{math} where the input element is labeled \begin{math}x\end{math} and the output element is labeled \begin{math}z\end{math}. 
+
+To calculate the association that is implied by these two mathematical transformations, substitute any real number (since the set of all real numbers is the input set) for the symbol \begin{math}x\end{math}. By this logic, \ref{eq1} represents the set of associations where every real number \begin{math}x\end{math} is associated with the real number \begin{math}y\end{math} that is the value of \begin{math}x + 1\end{math}. \ref{eq1} represents the set of associations where every real number \begin{math}x\end{math} is associated with the real number \begin{math}z\end{math} that is the value of \begin{math}x^{2}\end{math}.
 
 In computer science terminology, a mapping is an abstract data type or concrete data structure, commonly referred to as an \emph{associative array} or \emph{dictionary}.  
 
-Abstractly and simply, the only way to store data of any kind (text, image, sound, signal) in a computer of any kind, such that one can retrieve the data later, is to put the data in a bucket that has a label. If the data has no label that is associated with it, then practically, it cannot be retrieved. 
+Abstractly and simply, the one and only way to store data of any kind (0, 1, text, image, sound, signal) in a computer of any kind, such that one can retrieve the data later, is to put the data in a "bucket" that has a "label". If the data has no label that is associated with it, then practically, it cannot be retrieved. 
 
-In music information studies terminology, if one wants to be able to store a large amount of sheet music such that it can be found later, one needs a some system to catalog or index the material such that a piece of sheet music can be referred to by some label. In the case of a library, this label is often a call number, the title of the piece, or the name of the composer.
+In music information studies terminology, if one wants to be able to store a large amount of sheet music such that it can be found later, one needs a some system to catalog or index the material such that a piece of sheet music can be referred to by some label. In the case of a library, this label is often a call number, the title of the piece, the name of the composer, etc.
 
-Just like a library can use many different labeling systems to catalog sheet music in a library so that it can be retrieved with minimum headaches, a computer system can utilize many different abstract data types or concrete data structures. In both cases, the best choice is dependent on the material or data being cataloged or indexed. A mapping in computer science parlance then, can be understood as a particular system for labeling data.
+Just like a library can use many different labeling systems to catalog sheet music in a library so that it can be retrieved with minimum headaches, a computer system can internally utilize many different abstract data types or concrete data structures. In both cases, the best choice is dependent on the material or data being cataloged or indexed. A mapping structure in computer science parlance then, can be understood as a particular type of system for labeling data.
 
-In particular, a mapping is a labeling system that uses a \emph{collection} of labels (keys) and a \emph{collection} of pieces of data (values), where every label in the first collection is associated with one or many of the pieces of data in the second collection. Then this structure encompassing the two collections and the list of associations between the two collections is given a higher level label that refers to the mapping as a whole.
+In particular, a mapping is a labeling system that uses a \emph{collection} of labels (keys) and a \emph{collection} of pieces of data (values), where every label in the first collection is associated with one or many of the pieces of data in the second collection. Then this structure encompassing the two collections and the list of associations between the two collections is given a higher order label that refers to the mapping as a whole. This allows one to construct a mapping of mappings, which lends itself nicely to hierarchical labeling systems.
 
-This reframing of the term in the computer science context, as opposed to the mathematical context, clarifies one implication of the concept of mapping. One can specify multiple, unique mappings that each operate on the same collection of labels and the same pieces of data. Similarly, one can specify multiple, unique functions that each operate on the same input set and the same output set. 
+This reframing of the term in the computer science context, as opposed to the mathematical context, clarifies one implication of the concept of mapping. One can specify multiple, unique mappings that each operate on the same collection of labels and the same collection of pieces of data. Similarly, one can specify multiple, unique functions that each operate on the same input set and the same output set. Although in math, there is a distinct difference between a \emph{collection} and a \emph{set}, the colloquial understanding of the two terms, where they are interchangable, is sufficient for the purpose of this research and they will be used interchangably. 
 
 So in a computer system, one can create multiple mappings that each associate the same collection of labels with the same collection of data differently. This characteristic of mappings is one of the primary reasons why mappings are a useful frame for understanding the potential of digital musical instruments. 
 
-\section{Importance of Mapping in Musical Systems}
+\section{Importance of Mapping in Digital Musical Instruments}
 
 In an acoustic musical instrument, the DMI equivalents of the instrument's control mechanism and sound generation mechanism are \emph{intrinsically} coupled or bound to each other because the physical material of the instrument that forms the control mechanism also forms the sound generation mechanism. Making a decision that alters the control mechanism will significantly or subtly alter the sound generation mechanism.
 
 In a DMI the control mechanism is composed of sensors. The physical gestures of the performer are not coupled to the sound generation through purely mechanical means, but through electrical means. Each sensor, whether it senses acceleration, orientation, touch, etc. produces an electrical signal that correlates to some physical measurement. This analog electrical signal is converted to a digital signal through some kind of analog to digital signal conversion and then this signal is processed by a computer and sent to the sound generation mechanism, which is a piece of software that produces audio samples.
 
-A simple example makes clear that the control mechanism and sound generation mechanism are not \emph{intrinsically} coupled.
+A simple example makes clear that the control mechanism and sound generation mechanism are not \emph{intrinsically} coupled in a DMI.
 
-If one takes a control mechanism composed of touch sensors and replaces each of them with light sensors, then conditions the electrical signal emitted from the light sensors to fall within the same maximum and minimum range as the touch sensors were emitting, it is clear that the control mechanism has changed. But this change results in no change within the sound generation mechanism. The sound is generated by software that produces audio samples and thus is not effected by a change to the physical structure of the instrument.
+If one takes a control mechanism composed of touch sensors and replaces each of them with light sensors, then conditions the electrical signal emitted from the light sensors to fall within the same maximum and minimum range as the touch sensors were emitting, it is clear that the control mechanism has changed. But this change results in no change within the sound generation mechanism. The sound is generated by software that produces audio samples and thus is not effected by a change to the physical structure of the instrument. It is true that changing the type of sensor might affect the dynamics of the analog signal produced and thus the dynamics of the sound produced, however whether or not this coupling occurs is dependent on the signal conditioning and digital conversion that is used and is no longer an intrinsic aspect of the physical structure.
 
 In physical terms, when two formerly intrinsically coupled aspects of system are free to become uncoupled, a new degree of freedom is introduced.
 
-In the context of DMI research this new degree of freedom is called a choice of \emph{mapping}.
+In the context of DMI research this new degree of freedom is called a choice of \emph{mapping}. Mapping as used in this context is very similar to how the term is used in mathematics and computer science. The set of sensors embedded in the control mechanism produces a set of signals. The sound generation mechanism produces a specific sound depending on a set of signals dictated by the specifics of the software that composes the sound generation. Therefore, for any given control mechanism and sound generation mechanism there is a choice of how to associate the two sets of signals with each other. Importantly, this is a choice that is not available when constructing, for example, a violin because the two sets of signals (if this distinction between control mechanism and sound generation mechanism can be imagined in a violin) in that case are physically coupled and inseparable. It is not a choice that needs to be made with an acoustic instrument.
+
+This physical separation between the control mechanism, the mapping system, and the sound generation mechanism creates a modularity between the three components that can be exploited to simplify the DMI development and maintenance process.
 
 \section{A Dedicated Mapping System: libmapper}
 
@@ -97,7 +101,14 @@ The creation, evolution, and stabilization of the design a digital musical instr
 
 Similarly, a team of people building a digital musical instrument will often make a construction decision, evaluate the effect of that decision, make some changes, and repeat. This is often referred to as iterative development and occurs whether or not it is every made explicit. 
 
-The fact is that it is much easier to iterate and explore various designs of a virtual system then it is to explore designs of a physical system.
+Because such iterative development is so beneficial to the development of DMIs, people often use various platforms and frameworks as common building blocks for such systems. For the control hardware there are platforms like Arduino. Coding environments like Max/MSP and code libraries like STK simplify the development of synthesizer modules. In an effort to provide a similar foundation for creating mapping systems, the Digital Orchestra Toolbox was created as part of the McGill Digital Orchestra project and includes components representing the common subroutines used in a mapping system. 
+
+More recently, this functionality has been reimplemented as a C library called libmapper at the IDMIL at McGill University. Libmapper has several characteristics which make it a desirable system for configuring mappings. Seen from a high conceptual level, Libmapper is an implementation of a communication protocol that was created for mappings. 
+
+A communications protocol is a rigorous and formal description of a message format and rules for exchanging said messages. The protocol is distinct from the implementation of the protocol. A protocol without an implementation is metaphorically like a constitution without a government. The mapping protocol is itself defined in terms of the Open Sound Control (OSC) protocol. This is a common practice. The Internet is essentially a particular stack of protocols that are layered on top of each other and specify how devices and routers are to be addressed, open connections with each other, and interpret messages. In the case of Libmapper, the protocol layer that OSC itself is implemented on top of is called the User Datagram Protocol (UDP). The other common protocol that can be used at this protocol layer is the Transmission Control Protocol (TCP) which is the protocol that the well-known Hypertext Transfer Protocol (HTTP) that webpages typically use sits atop of. As a protocol, OSC does not assume a particular Transport (the name given to the layer in the protocol that UDP and TCP occupy - HTTP occupies the layer on top of the Transport layer, known as an Application layer) protocol that it is to be implemented as. This is opposed to HTTP, which is specifically a TCP-based protocol.
+
+Libmapper embeds into any module or device that allows for modifiable code that can interface with a C library and allows this libmapper-enabled module to create connections between components using the UDP network protocol, one of the protocols used to connect computers to the Internet. 
+The implementation
 
 \section{Usability and Graphical User Interfaces}
 
